our courses section added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
 
-
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css" />
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <!-- fontawsome  -->
@@ -350,6 +349,33 @@
       </div>
       <!--======== our salient features end========= -->
 
+      <!-- our courses start -->
+      <div class="bg-white bg-opacity-10">
+        <div
+          class="container px-4 py-4 mt-5 our-toper"
+          id="our-toper"
+        >
+        <h1 class="heading-title fw-normal lh-1 text-center wow slideInLeft" data-wow-duration="1s">
+          Our Courses
+        </h1>
+        <div class="row g-4 py-5 wow fadeInUp" data-wow-duration="2s">
+          <div class="col-6 col-md-3">
+            <h3 class="hover-4">Hover Me</h3>
+          </div>
+          <div class="col-6 col-md-3">
+            <h3 class="hover-4">Hover Me</h3>
+          </div>
+          <div class="col-6 col-md-3">
+            <h3 class="hover-4">Hover Me</h3>
+          </div>
+          <div class="col-6 col-md-3">
+            <h3 class="hover-4">Hover Me</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+      <!-- our courses end  -->
+
       <!-- our toper start -->
       <div class="bg-white bg-opacity-10">
         <div
@@ -357,7 +383,7 @@
           id="our-toper"
         >
         <h1 class="heading-title fw-normal lh-1 text-center wow slideInLeft" data-wow-duration="1s">
-          Our Stars
+          Our Start
         </h1>
         <div class="row g-4 py-5 wow fadeInUp" data-wow-duration="2s">
           <div class="gtco-testimonials">
