all page created

--- a/index.html
+++ b/index.html
@@ -101,9 +101,13 @@
         >
           <ul class="nav nav-pills align-content-around">
             <li class="nav-item">
-              <a href="index.html" class="nav-link active" aria-current="page">Home</a>
+              <a href="index.html" class="nav-link active" aria-current="page"
+                >Home</a
+              >
             </li>
-            <li class="nav-item"><a href="about-us.html" class="nav-link">About Us</a></li>
+            <li class="nav-item">
+              <a href="about-us.html" class="nav-link">About Us</a>
+            </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -116,19 +120,29 @@
                 Courses
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="iit-jee.html">IIT - JEE</a></li>
-                <li><a class="dropdown-item" href="#">NEET</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">MH-CET</a>
+                  <a class="dropdown-item" href="iit-jee.html">IIT - JEE</a>
+                </li>
+                <li><a class="dropdown-item" href="neet.html">NEET</a></li>
+                <li>
+                  <a class="dropdown-item" href="mh-cet.html">MH-CET</a>
                 </li>
               </ul>
             </li>
-            <li class="nav-item"><a href="#" class="nav-link">Results</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Admision</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Faculty</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Gallery</a></li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Contact Us</a>
+              <a href="results.html" class="nav-link">Results</a>
+            </li>
+            <li class="nav-item">
+              <a href="admision.html" class="nav-link">Admision</a>
+            </li>
+            <li class="nav-item">
+              <a href="faculty.html" class="nav-link">Faculty</a>
+            </li>
+            <li class="nav-item">
+              <a href="gallery.html" class="nav-link">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact-us.html" class="nav-link">Contact Us</a>
             </li>
           </ul>
         </div>
