--- a/contact-us.html
+++ b/contact-us.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>About Us | Shaikh Tuturials</title>
+    <title>Shaikh Tuturials</title>
     <!-- google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -80,7 +80,7 @@
     <nav class="navbar navbar-expand-lg bg-danger sticky-top">
       <div class="container px-0">
         <div class="">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="#">
             <img src="images/logo.png" alt="" width="70" height="auto" />
           </a>
         </div>
@@ -101,11 +101,9 @@
         >
           <ul class="nav nav-pills align-content-around">
             <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
+              <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
-            <li class="nav-item">
-              <a href="about-us.html" class="nav-link active">About Us</a>
-            </li>
+            <li class="nav-item"><a href="#" class="nav-link">About Us</a></li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -118,29 +116,19 @@
                 Courses
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">IIT - JEE</a></li>
+                <li><a class="dropdown-item" href="#">NEET action</a></li>
                 <li>
-                  <a class="dropdown-item" href="iit-jee.html">IIT - JEE</a>
-                </li>
-                <li><a class="dropdown-item" href="neet.html">NEET</a></li>
-                <li>
-                  <a class="dropdown-item" href="mh-cet.html">MH-CET</a>
+                  <a class="dropdown-item" href="#">MH-CET</a>
                 </li>
               </ul>
             </li>
+            <li class="nav-item"><a href="#" class="nav-link">Results</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Admision</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Faculty</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Gallery</a></li>
             <li class="nav-item">
-              <a href="results.html" class="nav-link">Results</a>
-            </li>
-            <li class="nav-item">
-              <a href="admision.html" class="nav-link">Admision</a>
-            </li>
-            <li class="nav-item">
-              <a href="faculty.html" class="nav-link">Faculty</a>
-            </li>
-            <li class="nav-item">
-              <a href="gallery.html" class="nav-link">Gallery</a>
-            </li>
-            <li class="nav-item">
-              <a href="contact-us.html" class="nav-link">Contact Us</a>
+              <a href="#" class="nav-link">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -151,120 +139,11 @@
       <!-- ==========about start============ -->
       <div class="container py-4">
         <div class="row about">
-          <div
-            class="col-12 text-center pt-4 pb-5 wow slideInLeft"
-            data-wow-duration="1s"
-          >
-            <h1 class="heading-title fw-normal lh-1">About Us</h1>
-          </div>
-          <div class="col-md-7 wow slideInLeft" data-wow-duration="1s">
-            <p class="lead">
-              Some great placeholder content for the first featurette here.
-              Imagine some exciting prose here.
-            </p>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
-              sunt nihil illo repellat maiores, tenetur modi quisquam nulla
-              quas, qui aliquid quia nemo, deserunt earum explicabo velit
-              numquam ratione facilis dolore perspiciatis cupiditate! Molestiae
-            </p>
-            <div class="row">
-              <h3>Our Salient Features</h3>
-              <div class="col-6 mt-3">
-                <p class="lead">
-                  <i class="fa-solid fa-graduation-cap text-primary"></i>
-                  Experienced Faculties
-                </p>
-              </div>
-              <div class="col-6 mt-3">
-                <p class="lead">
-                  <i class="fa-solid fa-clipboard text-success"></i> Weekly Test
-                  Series
-                </p>
-              </div>
-              <div class="col-6 mt-3">
-                <p class="lead">
-                  <i
-                    class="fa-solid fa-people-arrows-left-right text-danger"
-                  ></i>
-                  Individual counselling
-                </p>
-              </div>
-              <div class="col-6 mt-3">
-                <p class="lead">
-                  <i class="fa-solid fa-location-crosshairs text-warning"></i>
-                  Vocational Guidance
-                </p>
-              </div>
-              <div class="col-6 mt-3">
-                <p class="lead">
-                  <i class="fa-solid fa-person-breastfeeding text-info"></i>
-                  Regular Parents
-                </p>
-              </div>
-              <div class="col-6 mt-3">
-                <p class="lead">
-                  <i class="fa-solid fa-book-open-reader text-dark bg-t"></i>
-                  Printed Study Materials
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-5 wow bounceInRight" data-wow-duration="2s">
-            <img src="images/about-us.jpg" />
-          </div>
-
-          <div class="col-12 mt-2">
-            <p class="wow fadeInUp" data-wow-duration="1s">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus
-              facilis labore quas maxime numquam dolorem nesciunt placeat
-              deleniti iure, voluptatem assumenda a aliquam mollitia eaque
-              quibusdam ex quam provident ducimus aut nisi dolores nemo saepe! A
-              sint repudiandae voluptatem nihil totam dignissimos ad eius,
-              architecto possimus mollitia, dolor recusandae, expedita fugit
-              minus molestiae sequi voluptas. Aliquam veniam voluptatibus ipsam,
-              consequuntur delectus excepturi ea necessitatibus, distinctio
-              alias ipsum cumque vel vitae. Maxime itaque velit optio voluptatem
-              earum tempore veniam doloremque suscipit, ut consectetur nobis
-              aperiam eius ex, assumenda hic culpa ducimus praesentium. Dolorem
-              enim nostrum doloribus ipsa ut molestiae animi velit.
-            </p>
-            <p class="wow fadeInUp" data-wow-duration="1s">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus
-              quasi modi enim qui ratione libero laudantium repudiandae nobis
-              sit impedit! Fugit doloribus praesentium accusamus non provident
-              rem eveniet numquam officia cum esse sed aperiam commodi ipsa,
-              officiis quam excepturi accusantium adipisci error quisquam
-              tenetur exercitationem voluptatibus corporis dolorum. Dolorum
-              laboriosam pariatur temporibus magni id dolore nihil obcaecati
-              dolor optio quis, omnis exercitationem perferendis mollitia.
-              Possimus, ex! Modi delectus asperiores repellendus cupiditate
-              labore incidunt, a officiis perferendis consequatur eius vel
-              laudantium ipsum ipsa recusandae optio velit, ad, minus culpa
-              dolorum id. Quasi labore iste vel nisi pariatur veritatis fuga
-              obcaecati enim fugit rerum ex, eaque blanditiis est quidem rem
-              ullam atque dolore quam voluptas necessitatibus nulla doloremque
-              ducimus? Perferendis laboriosam, quis quibusdam porro culpa
-              impedit blanditiis hic id sequi, repellendus rem, saepe non cum
-              libero aliquam suscipit? Numquam, nemo dicta quidem, perferendis
-              voluptas veniam, a quae amet id in tempore fugiat nulla. Nam
-              dolorem quos dolores a iste, modi, quis laudantium necessitatibus,
-              repellat quas veniam quidem fugiat? Eos accusantium nisi autem
-              animi corrupti mollitia minima culpa voluptatum magnam recusandae
-              quas obcaecati, quia hic rerum molestiae ipsum iusto, delectus,
-              alias beatae. Eos repellat, at officiis velit repudiandae labore
-              repellendus, modi minima perspiciatis magnam qui culpa cum, harum
-              similique dolorum sint odio ex dignissimos architecto magni
-              consequatur! Laudantium quasi, expedita cum nemo quibusdam
-              consequatur corrupti iusto commodi illo modi nihil quaerat
-              voluptatibus perspiciatis cupiditate minima ipsam quia non eaque
-              voluptate dolorum necessitatibus nesciunt vero alias. Ducimus
-              accusantium eaque hic ipsum, fugiat vero ab.
-            </p>
-          </div>
+          
         </div>
       </div>
       <!-- ==========about end============ -->
+
     </main>
 
     <!-- ============footer start ============= -->
@@ -394,5 +273,6 @@
       src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <script type="text/javascript" src="js/main.js"></script>
+   
   </body>
 </html>
