--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="lib/font-awesome/all.min.css" />
     <link rel="stylesheet" href="lib/animate/animate.min.css" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
@@ -63,7 +64,7 @@
               <span class="px-4">| </span>
               <i class="fa-solid fa-mobile-screen-button pe-3"></i> Helpline
               Number +91 9892728554 <span class="px-4">| </span>
-              <i class="fa-solid fa-mobile-screen-button pe-3"></i> Admision
+              <i class="fa-solid fa-mobile-screen-button pe-3"></i> Admission
               Enquiry +91 7021431986
             </span>
             <span class="ps-3">
@@ -99,7 +100,7 @@
           class="collapse navbar-collapse justify-content-end"
           id="navbarNavDropdown"
         >
-          <ul class="nav nav-pills align-content-around">
+          <ul class="nav nav-pills align-content-around d-md-flex d-block">
             <li class="nav-item">
               <a href="index.html" class="nav-link active" aria-current="page"
                 >Home</a
@@ -133,7 +134,7 @@
               <a href="results.html" class="nav-link">Results</a>
             </li>
             <li class="nav-item">
-              <a href="admision.html" class="nav-link">Admision</a>
+              <a href="Admission.html" class="nav-link">Admission</a>
             </li>
             <li class="nav-item">
               <a href="faculty.html" class="nav-link">Faculty</a>
@@ -324,6 +325,7 @@
             Our Courses
           </h1>
           <div class="row g-4 py-5 row-cols-1 row-cols-lg-4">
+            <a href="mh-cet.html">
             <div
               class="salient-features-item col text-center wow fadeInLeft"
               data-wow-duration="2s"
@@ -337,6 +339,8 @@
                 <h2>MHT-CET</h2>
               </div>
             </div>
+          </a>
+          <a href="iit-jee.html">
             <div
               class="salient-features-item col text-center wow fadeInLeft"
               data-wow-duration="2s"
@@ -350,6 +354,9 @@
                 <h2>JEE</h2>
               </div>
             </div>
+            </a>
+
+            <a href="neet.html">
             <div
               class="salient-features-item col text-center wow fadeInLeft"
               data-wow-duration="2s"
@@ -363,6 +370,9 @@
                 <h2>NEET</h2>
               </div>
             </div>
+            </a>
+
+            <a href="mh-cet.html">
             <div
               class="salient-features-item col text-center wow fadeInRight"
               data-wow-duration="1s"
@@ -376,9 +386,11 @@
                 <h2>Bsc</h2>
               </div>
             </div>
+            </a>
           </div>
 
           <div class="row g-4 py-5 row-cols-1 row-cols-lg-4">
+            <a href="mh-cet.html">
             <div
               class="salient-features-item col text-center wow fadeInRight"
               data-wow-duration="2s"
@@ -392,6 +404,9 @@
                 <h2>English Medium</h2>
               </div>
             </div>
+            </a>
+
+            <a href="mh-cet.html">
             <div
               class="salient-features-item col text-center wow fadeInRight"
               data-wow-duration="2s"
@@ -405,6 +420,9 @@
                 <h2>English Medium</h2>
               </div>
             </div>
+            </a>
+
+            <a href="mh-cet.html">
             <div
               class="salient-features-item col text-center wow fadeInRight"
               data-wow-duration="2s"
@@ -418,6 +436,9 @@
                 <h2>Science</h2>
               </div>
             </div>
+            </a>
+
+            <a href="mh-cet.html">
             <div
               class="salient-features-item col text-center wow fadeInRight"
               data-wow-duration="2s"
@@ -431,11 +452,14 @@
                 <h2>Science</h2>
               </div>
             </div>
+            </a>
           </div>
           <div class="col p-3 text-center">
+            <a href="courses.html">
             <button type="button" class="btn btn-outline-danger px-4">
               View More
             </button>
+            </a>
           </div>
         </div>
       </div>
@@ -454,33 +478,43 @@
             <div class="owl-carousel owl-theme">
               <div class="item text-center hover-news">
                 <p>Admissions in progress for JEE 2019-2020</p>
+                <a href="admission.html">
                 <button type="button" class="btn btn-outline-danger">
                   JEE 2019-2020
                 </button>
+              </a>
               </div>
               <div class="item">
                 <p>Admissions in progress for NEET 2019-2020</p>
+                <a href="admission.html">
                 <button type="button" class="btn btn-outline-danger">
                   NEET 2019-2020
                 </button>
+                </a>
               </div>
               <div class="item">
                 <p>Admissions in progress for State Board Coaching 2019-2021</p>
+                <a href="admission.html">
                 <button type="button" class="btn btn-outline-danger">
                   State Board Coaching 2019-2021
                 </button>
+                </a>
               </div>
               <div class="item">
                 <p>JEE Mains 2019 Paper & Solutions Available</p>
+                <a href="admission.html">
                 <button type="button" class="btn btn-outline-danger">
                   Paper & Solutions
                 </button>
+                </a>
               </div>
               <div class="item">
                 <p>Admissions in progress for JEE 2019-2020</p>
+                <a href="admission.html">
                 <button type="button" class="btn btn-outline-danger">
                   JEE 2019-2020
                 </button>
+                </a>
               </div>
             </div>
           </div>
@@ -770,7 +804,7 @@
                   </div>
                 </div>
                 <div>
-                  <div class="card text-center bg-danger opacity-50">
+                  <div class="card text-center ">
                     <img
                       class="card-img-top"
                       src="https://images.unsplash.com/photo-1588361035994-295e21daa761?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=301&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=301"
@@ -790,7 +824,7 @@
                   </div>
                 </div>
                 <div>
-                  <div class="card text-center bg-danger opacity-50">
+                  <div class="card text-center ">
                     <img
                       class="card-img-top"
                       src="https://images.unsplash.com/photo-1575377222312-dd1a63a51638?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=302&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=302"
@@ -810,7 +844,7 @@
                   </div>
                 </div>
                 <div>
-                  <div class="card text-center bg-danger opacity-50">
+                  <div class="card text-center ">
                     <img
                       class="card-img-top"
                       src="https://images.unsplash.com/photo-1549836938-d278c5d46d20?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=303&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=50&w=303"
@@ -913,9 +947,11 @@
               </div>
             </div>
             <div class="col p-3 text-center">
+              <a href="faculty.html">
               <button type="button" class="btn btn-outline-danger px-4">
                 View More
               </button>
+            </a>
             </div>
           </div>
         </div>
@@ -947,7 +983,7 @@
                     make a purchase. Read about these customer review on site"
                   </p>
                   <p class="text-center">
-                    <a href="#">
+                    <a href="activity-deatils.html">
                       <button type="button" class="btn btn-outline-danger px-4">
                         View More
                       </button>
@@ -968,7 +1004,7 @@
                     skeptical."
                   </p>
                   <p class="text-center">
-                    <a href="#">
+                    <a href="activity-deatils.html">
                       <button type="button" class="btn btn-outline-danger px-4">
                         View More
                       </button>
@@ -989,7 +1025,7 @@
                     average 6 hours a day."
                   </p>
                   <p class="text-center">
-                    <a href="#">
+                    <a href="activity-deatils.html">
                       <button type="button" class="btn btn-outline-danger px-4">
                         View More
                       </button>
@@ -1010,7 +1046,7 @@
                     know more
                   </p>
                   <p class="text-center">
-                    <a href="#">
+                    <a href="activity-deatils.html">
                       <button type="button" class="btn btn-outline-danger px-4">
                         View More
                       </button>
@@ -1033,19 +1069,19 @@
             <h5>Quilk Link</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted">Home</a>
+                <a href="index.html" class="nav-link p-0 text-muted">Home</a>
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted">Features</a>
+                <a href="admission.html" class="nav-link p-0 text-muted">Admission</a>
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted">Pricing</a>
+                <a href="gallery.html" class="nav-link p-0 text-muted">Gallery</a>
               </li>
               <li class="nav-item mb-2">
                 <a href="#" class="nav-link p-0 text-muted">FAQs</a>
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted">About</a>
+                <a href="about-us.html" class="nav-link p-0 text-muted">About</a>
               </li>
             </ul>
           </div>
@@ -1054,19 +1090,19 @@
             <h5>Courses</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted">Home</a>
+                <a href="mh-cet.html" class="nav-link p-0 text-muted">Mh-CET</a>
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted">Features</a>
+                <a href="iit-jee.html" class="nav-link p-0 text-muted">IIT-JEE</a>
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted">Pricing</a>
+                <a href="neet.html" class="nav-link p-0 text-muted">NEET</a>
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted">FAQs</a>
+                <a href="#" class="nav-link p-0 text-muted">English Medium</a>
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted">About</a>
+                <a href="#" class="nav-link p-0 text-muted">Urdu Medium</a>
               </li>
             </ul>
           </div>
@@ -1075,19 +1111,19 @@
             <h5>Study with us</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted">Home</a>
+                <a href="#" class="nav-link p-0 text-muted">F.Y.J.C (Sci)</a>
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted">Features</a>
+                <a href="#" class="nav-link p-0 text-muted">S.Y.J.C (Sci)</a>
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted">Pricing</a>
+                <a href="#" class="nav-link p-0 text-muted">AIIMS</a>
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted">FAQs</a>
+                <a href="#" class="nav-link p-0 text-muted">BSc</a>
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-muted">About</a>
+                <a href="#" class="nav-link p-0 text-muted">BITSAT                </a>
               </li>
             </ul>
           </div>
@@ -1150,6 +1186,7 @@
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
+    <script src="lib/lightbox/js/lightbox.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
