--- a/activity-deatils.html
+++ b/activity-deatils.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Faculty | Shaikh Tuturials</title>
+    <title>Activities | Shaikh Tuturials</title>
     <!-- google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -134,7 +134,7 @@
               <a href="Admission.html" class="nav-link">Admission</a>
             </li>
             <li class="nav-item">
-              <a href="faculty.html" class="nav-link active">Faculty</a>
+              <a href="faculty.html" class="nav-link">Faculty</a>
             </li>
             <li class="nav-item">
               <a href="gallery.html" class="nav-link">Gallery</a>
@@ -149,222 +149,145 @@
     <!-- ===========main header end============== -->
     <main>
       <!-- ==========about start============ -->
-      <div class="container py-4 our-toper" id="our-toper">
+      <div class="container py-4">
         <div class="row">
           <div
-            class="col-12 text-center pb-5 wow slideInLeft"
+            class="col-12 text-center pt-4 pb-5 wow slideInLeft"
             data-wow-duration="1s"
           >
-            <h1 class="heading-title fw-normal lh-1">Faculties</h1>
+            <h1 class="heading-title fw-normal lh-1"> Our Activities</h1>
+          </div>
+          <div class="col-md-9 wow slideInLeft" data-wow-duration="1s">
+            <img src="images/picnic.jpg" class="activities-img">
+            <h3 class="border-bottom border-danger text-primary">
+               Activity Name
+            </h3>
+            <p class="lead">
+              Some great placeholder content for the first featurette here.
+              Imagine some exciting prose here.
+            </p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
+              sunt nihil illo repellat maiores, tenetur modi quisquam nulla
+              quas, qui aliquid quia nemo, deserunt earum explicabo velit
+              numquam ratione facilis dolore perspiciatis cupiditate! Molestiae
+            </p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
+              sunt nihil illo repellat maiores, tenetur modi quisquam nulla
+              quas, qui aliquid quia nemo, deserunt earum explicabo velit
+              numquam ratione facilis dolore perspiciatis cupiditate! Molestiae
+            </p>
+            <p class="wow fadeInUp" data-wow-duration="1s">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus
+              facilis labore quas maxime numquam dolorem nesciunt placeat
+              deleniti iure, voluptatem assumenda a aliquam mollitia eaque
+              quibusdam ex quam provident ducimus aut nisi dolores nemo saepe! A
+              sint repudiandae voluptatem nihil totam dignissimos ad eius,
+              architecto possimus mollitia, dolor recusandae, expedita fugit
+              minus molestiae sequi voluptas. Aliquam veniam voluptatibus ipsam,
+              consequuntur delectus excepturi ea necessitatibus, distinctio
+              alias ipsum cumque vel vitae. Maxime itaque velit optio voluptatem
+              earum tempore veniam doloremque suscipit, ut consectetur nobis
+              aperiam eius ex, assumenda hic culpa ducimus praesentium. Dolorem
+              enim nostrum doloribus ipsa ut molestiae animi velit.
+            </p>
           </div>
 
-          <div class="row pb-5">
-            <div class="col-lg-4 wow fadeInLeft mb-3  d-flex  justify-content-around">
-              <div class="card">
-                <div class="face front-face">
-                  <img
-                    src="https://images.unsplash.com/photo-1557862921-37829c790f19?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80"
-                    alt=""
-                    class="profile"
-                  />
-                  <div class="pt-3 text-uppercase name">Robert Garrison</div>
-                  <div class="designation">Android Developer</div>
-                </div>
-                <div class="face back-face">
-                  <span class="fas fa-quote-left"></span>
-                  <div class="testimonial">
-                    I made bacck the purchase price in just 48 hours! Thank you
-                    for making it pain less, pleasant. The service was
-                    execellent. I will refer everyone I know.
-                  </div>
-                  <span class="fas fa-quote-right"></span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 wow fadeInLeft mb-3  d-flex  justify-content-around" data-wow-duration="2s">
-              <div class="card">
-                <div class="face front-face">
-                  <img
-                    src="https://images.unsplash.com/photo-1600486913747-55e5470d6f40?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-                    alt=""
-                    class="profile"
-                  />
-                  <div class="pt-3 text-uppercase name">Jeffery Kennan</div>
-                  <div class="designation">Full Stack Developer</div>
-                </div>
-                <div class="face back-face">
-                  <span class="fas fa-quote-left"></span>
-                  <div class="testimonial">
-                    Really good, you have saved our business! I made bacck the
-                    purchase price in just 48 hours! man, this thing is getting
-                    better and better as I learn more about it.
-                  </div>
-                  <span class="fas fa-quote-right"></span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 wow fadeInLeft mb-3  d-flex  justify-content-around" data-wow-duration="3s">
-              <div class="card">
-                <div class="face front-face">
-                  <img
-                    src="https://images.unsplash.com/photo-1614574762522-6ac2fbba2208?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MjY2fHxtYW58ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-                    alt=""
-                    class="profile"
-                  />
-                  <div class="pt-3 text-uppercase name">Issac Maxwell</div>
-                  <div class="designation">Finance Director</div>
-                </div>
-                <div class="face back-face">
-                  <span class="fas fa-quote-left"></span>
-                  <div class="testimonial">
-                    Account keeper is the most valuable business research we
-                    have EVER purchased. Without electrician, we would ahave
-                    gone bankrupt by now.
-                  </div>
-                  <span class="fas fa-quote-right"></span>
-                </div>
-              </div>
+          <!-- side bar start -->
+          <div
+            class="col-md-3 wow bounceInRight side-bar"
+            data-wow-duration="2s"
+          >
+            <div class="card border-danger rounded-0 rounded-top">
+              <div class="bg-red card-header text-white fw-bold">Featured</div>
+              <ul class="list-group list-group-flush">
+                <a href="#"><li class="list-group-item">MHT-CET</li></a>
+                <a href="#"><li class="list-group-item">JEET</li></a>
+                <a href="#"><li class="list-group-item">NEET</li></a>
+                <a href="#"><li class="list-group-item">Bsc</li></a>
+                <a href="#"><li class="list-group-item">F.Y.J.C Science</li></a>
+                <a href="#"><li class="list-group-item">S.Y.J.C Science</li></a>
+                <a href="#"
+                  ><li class="list-group-item">IX English Medium</li></a
+                >
+                <a href="#"
+                  ><li class="list-group-item">X English Medium</li></a
+                >
+              </ul>
             </div>
 
-            <div class="col-lg-4 wow fadeInLeft mb-3  d-flex  justify-content-around">
-              <div class="card">
-                <div class="face front-face">
-                  <img
-                    src="https://images.unsplash.com/photo-1557862921-37829c790f19?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80"
-                    alt=""
-                    class="profile"
-                  />
-                  <div class="pt-3 text-uppercase name">Robert Garrison</div>
-                  <div class="designation">Android Developer</div>
-                </div>
-                <div class="face back-face">
-                  <span class="fas fa-quote-left"></span>
-                  <div class="testimonial">
-                    I made bacck the purchase price in just 48 hours! Thank you
-                    for making it pain less, pleasant. The service was
-                    execellent. I will refer everyone I know.
-                  </div>
-                  <span class="fas fa-quote-right"></span>
-                </div>
+            <!-- side form -->
+            <div class="card border-danger rounded-0 rounded-top mt-4">
+              <div class="bg-red card-header text-white fw-bold">
+                Quik Enquiry
               </div>
-            </div>
-            <div class="col-lg-4 wow fadeInLeft mb-3  d-flex  justify-content-around" data-wow-duration="2s">
-              <div class="card">
-                <div class="face front-face">
-                  <img
-                    src="https://images.unsplash.com/photo-1600486913747-55e5470d6f40?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-                    alt=""
-                    class="profile"
+              <form class="p-3">
+                <div class="mb-2">
+                  <label for="exampleInputName" class="form-label"
+                    >Full Name</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="exampleInputName"
+                    aria-describedby="emailHelp"
                   />
-                  <div class="pt-3 text-uppercase name">Jeffery Kennan</div>
-                  <div class="designation">Full Stack Developer</div>
                 </div>
-                <div class="face back-face">
-                  <span class="fas fa-quote-left"></span>
-                  <div class="testimonial">
-                    Really good, you have saved our business! I made bacck the
-                    purchase price in just 48 hours! man, this thing is getting
-                    better and better as I learn more about it.
-                  </div>
-                  <span class="fas fa-quote-right"></span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 wow fadeInLeft mb-3  d-flex  justify-content-around" data-wow-duration="3s">
-              <div class="card">
-                <div class="face front-face">
-                  <img
-                    src="https://images.unsplash.com/photo-1614574762522-6ac2fbba2208?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MjY2fHxtYW58ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-                    alt=""
-                    class="profile"
+                <div class="mb-2">
+                  <label for="exampleInputEmailid1" class="form-label"
+                    >Email ID</label
+                  >
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="exampleInputEmailid"
                   />
-                  <div class="pt-3 text-uppercase name">Issac Maxwell</div>
-                  <div class="designation">Finance Director</div>
                 </div>
-                <div class="face back-face">
-                  <span class="fas fa-quote-left"></span>
-                  <div class="testimonial">
-                    Account keeper is the most valuable business research we
-                    have EVER purchased. Without electrician, we would ahave
-                    gone bankrupt by now.
-                  </div>
-                  <span class="fas fa-quote-right"></span>
+                <div class="mb-2">
+                  <label for="exampleInputtext" class="form-label"
+                    >Mobile Number</label
+                  >
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="exampleInputnumber"
+                  />
                 </div>
-              </div>
-            </div>
+                <div class="mb-2">
+                  <label for="exampleFormControlTextarea1" class="form-label"
+                    >Select Class</label
+                  >
+                  <select
+                    class="form-select"
+                    aria-label="Default select example"
+                  >
+                    <option selected>Open this select menu</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
+                </div>
+                <div class="mb-2">
+                  <label for="exampleFormControlTextarea1" class="form-label"
+                    >Message</label
+                  >
+                  <textarea
+                    class="form-control"
+                    id="exampleFormControlTextarea1"
+                    rows="3"
+                  ></textarea>
+                </div>
 
-            <div class="col-lg-4 wow fadeInLeft mb-3  d-flex  justify-content-around">
-              <div class="card">
-                <div class="face front-face">
-                  <img
-                    src="https://images.unsplash.com/photo-1557862921-37829c790f19?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80"
-                    alt=""
-                    class="profile"
-                  />
-                  <div class="pt-3 text-uppercase name">Robert Garrison</div>
-                  <div class="designation">Android Developer</div>
-                </div>
-                <div class="face back-face">
-                  <span class="fas fa-quote-left"></span>
-                  <div class="testimonial">
-                    I made bacck the purchase price in just 48 hours! Thank you
-                    for making it pain less, pleasant. The service was
-                    execellent. I will refer everyone I know.
-                  </div>
-                  <span class="fas fa-quote-right"></span>
-                </div>
-              </div>
+                <button type="button" class="btn btn-outline-danger w-100">
+                  Submit
+                </button>
+              </form>
             </div>
-            <div class="col-lg-4 wow fadeInLeft mb-3  d-flex  justify-content-around" data-wow-duration="2s">
-              <div class="card">
-                <div class="face front-face">
-                  <img
-                    src="https://images.unsplash.com/photo-1600486913747-55e5470d6f40?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-                    alt=""
-                    class="profile"
-                  />
-                  <div class="pt-3 text-uppercase name">Jeffery Kennan</div>
-                  <div class="designation">Full Stack Developer</div>
-                </div>
-                <div class="face back-face">
-                  <span class="fas fa-quote-left"></span>
-                  <div class="testimonial">
-                    Really good, you have saved our business! I made bacck the
-                    purchase price in just 48 hours! man, this thing is getting
-                    better and better as I learn more about it.
-                  </div>
-                  <span class="fas fa-quote-right"></span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 wow fadeInLeft mb-3  d-flex  justify-content-around" data-wow-duration="3s">
-              <div class="card">
-                <div class="face front-face">
-                  <img
-                    src="https://images.unsplash.com/photo-1614574762522-6ac2fbba2208?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MjY2fHxtYW58ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-                    alt=""
-                    class="profile"
-                  />
-                  <div class="pt-3 text-uppercase name">Issac Maxwell</div>
-                  <div class="designation">Finance Director</div>
-                </div>
-                <div class="face back-face">
-                  <span class="fas fa-quote-left"></span>
-                  <div class="testimonial">
-                    Account keeper is the most valuable business research we
-                    have EVER purchased. Without electrician, we would ahave
-                    gone bankrupt by now.
-                  </div>
-                  <span class="fas fa-quote-right"></span>
-                </div>
-              </div>
-            </div>
-            
           </div>
         </div>
       </div>
       <!-- ==========about end============ -->
-
     </main>
 
     <!-- ============footer start ============= -->
@@ -494,6 +417,5 @@
       src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <script type="text/javascript" src="js/main.js"></script>
-   
   </body>
 </html>
