--- a/admission.html
+++ b/admission.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>About Us | Shaikh Tuturials</title>
+    <title>Admission| Shaikh Tuturials</title>
     <!-- google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -104,7 +104,7 @@
               <a href="index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="about-us.html" class="nav-link active">About Us</a>
+              <a href="about-us.html" class="nav-link">About Us</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -131,7 +131,7 @@
               <a href="results.html" class="nav-link">Results</a>
             </li>
             <li class="nav-item">
-              <a href="Admission.html" class="nav-link">Admission</a>
+              <a href="Admission.html" class="nav-link active">Admission</a>
             </li>
             <li class="nav-item">
               <a href="faculty.html" class="nav-link">Faculty</a>
@@ -155,112 +155,149 @@
             class="col-12 text-center pt-4 pb-5 wow slideInLeft"
             data-wow-duration="1s"
           >
-            <h1 class="heading-title fw-normal lh-1">About Us</h1>
+            <h1 class="heading-title fw-normal lh-1">Admission</h1>
           </div>
-          <div class="col-md-7 wow slideInLeft" data-wow-duration="1s">
+          <div class="col-md-9 wow slideInLeft" data-wow-duration="1s">
+            <h3 class="border-bottom border-danger text-primary">
+              <i class="fa-solid fa-hand-point-right"></i> Documents To Be Submitted
+
+            </h3>
             <p class="lead">
-              Some great placeholder content for the first featurette here.
-              Imagine some exciting prose here.
+              <ul class="">
+                <li>Two recent passport size unattested colour photographs of the students.</li>
+                <li>Original hall tickets of Std.X board exam / school ID for identification</li>
+                <li>A photocopy of the original mark sheet, after the results are declared</li>
+                </ul>
             </p>
+
+            <h3 class="border-bottom border-danger text-primary">
+              <i class="fa-solid fa-hand-point-right"></i> Payment Of Fees
+            </h3>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
-              sunt nihil illo repellat maiores, tenetur modi quisquam nulla
-              quas, qui aliquid quia nemo, deserunt earum explicabo velit
-              numquam ratione facilis dolore perspiciatis cupiditate! Molestiae
+              <ul class="">
+                <li>All payments must be made in the Centre office. Timings: 8.30 am – 8.30 pm on all days.</li>
+                <li>Preferred mode of payment: Cheque/ Pay Order I RTGS / NEFT / Paytm and online bank transfer.</li>
+                <li>It is compulsory to submit all PDCs during admission, when the payment is being done in installments.</li>
+                <li>Admission form will not be accepted without all PDCs.</li>
+                <li>Parents will be given an acknowledgment slip with the details of all PDCs submitted.</li>
+                <li>Parents may pay for a few or all installments by cash, provided that the payment is done at least 2 days prior to the due date of installments.</li>
+                <li>Those students who fail to pay subsequent installments by the due dates will have their admission declared null and void, and the monies paid earlier will be forfeited. The Management does not take responsibility of reminding parents/ students about ensuing payment of subsequent installments.</li>
+                <li>In case installment cheques are dishonoured, parents will have to pay applicable bank charges for every default. If the installment cheques of a student are dishonoured more than once, parents will have to make the full outstanding payment immediately. Installment facility will no longer be available.</li>
+                </ul>
             </p>
-            <div class="row">
-              <h3>Our Salient Features</h3>
-              <div class="col-6 mt-3">
-                <p class="lead">
-                  <i class="fa-solid fa-graduation-cap text-primary"></i>
-                  Experienced Faculties
-                </p>
-              </div>
-              <div class="col-6 mt-3">
-                <p class="lead">
-                  <i class="fa-solid fa-clipboard text-success"></i> Weekly Test
-                  Series
-                </p>
-              </div>
-              <div class="col-6 mt-3">
-                <p class="lead">
-                  <i
-                    class="fa-solid fa-people-arrows-left-right text-danger"
-                  ></i>
-                  Individual counselling
-                </p>
-              </div>
-              <div class="col-6 mt-3">
-                <p class="lead">
-                  <i class="fa-solid fa-location-crosshairs text-warning"></i>
-                  Vocational Guidance
-                </p>
-              </div>
-              <div class="col-6 mt-3">
-                <p class="lead">
-                  <i class="fa-solid fa-person-breastfeeding text-info"></i>
-                  Regular Parents
-                </p>
-              </div>
-              <div class="col-6 mt-3">
-                <p class="lead">
-                  <i class="fa-solid fa-book-open-reader text-dark bg-t"></i>
-                  Printed Study Materials
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-5 wow bounceInRight" data-wow-duration="2s">
-            <img src="images/about-us.jpg" />
+
+            <h3 class="mt-5 border-bottom border-danger text-primary">
+              <i class="fa-solid fa-hand-point-right"></i> Refund of Fees
+            </h3>
+
+            <p>
+              <ul class="">
+                <li>There is no refund/Transfer of fees under any circumstances (including change of plans, change of residence, transfers, change of college, change of stream, etc.) except under Disclaimer clause.</li>
+                </ul>
+            </p>
+
+            <h3 class="mt-5 border-bottom border-danger text-primary">
+              <i class="fa-solid fa-hand-point-right"></i> Disclaimer
+            </h3>
+            <p class="wow fadeInUp" data-wow-duration="1s">
+              <ul class="admission_content">
+                <li>If a student is dissatisfied with the quality of teaching, he has the option of disclaiming his admission within a fortnight of the start of the course; Full fees, minus the total service tax will be refunded on receipt of a written request signed by the student’s parent/ guardian.</li>
+                 <li>To take advantage of Disclaimer Clause, a student should have attended all the lectures for at least the first 2 weeks of the course after joining the course according to the timetable of his/ her batch.</li>
+                  <li>Students can disclaim admission only in the first year of admission; the Disclaimer Clause is applicable only once within fifteen days from the start of the course.</li>
+                </ul>
+            </p>
           </div>
 
-          <div class="col-12 mt-2">
-            <p class="wow fadeInUp" data-wow-duration="1s">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus
-              facilis labore quas maxime numquam dolorem nesciunt placeat
-              deleniti iure, voluptatem assumenda a aliquam mollitia eaque
-              quibusdam ex quam provident ducimus aut nisi dolores nemo saepe! A
-              sint repudiandae voluptatem nihil totam dignissimos ad eius,
-              architecto possimus mollitia, dolor recusandae, expedita fugit
-              minus molestiae sequi voluptas. Aliquam veniam voluptatibus ipsam,
-              consequuntur delectus excepturi ea necessitatibus, distinctio
-              alias ipsum cumque vel vitae. Maxime itaque velit optio voluptatem
-              earum tempore veniam doloremque suscipit, ut consectetur nobis
-              aperiam eius ex, assumenda hic culpa ducimus praesentium. Dolorem
-              enim nostrum doloribus ipsa ut molestiae animi velit.
-            </p>
-            <p class="wow fadeInUp" data-wow-duration="1s">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus
-              quasi modi enim qui ratione libero laudantium repudiandae nobis
-              sit impedit! Fugit doloribus praesentium accusamus non provident
-              rem eveniet numquam officia cum esse sed aperiam commodi ipsa,
-              officiis quam excepturi accusantium adipisci error quisquam
-              tenetur exercitationem voluptatibus corporis dolorum. Dolorum
-              laboriosam pariatur temporibus magni id dolore nihil obcaecati
-              dolor optio quis, omnis exercitationem perferendis mollitia.
-              Possimus, ex! Modi delectus asperiores repellendus cupiditate
-              labore incidunt, a officiis perferendis consequatur eius vel
-              laudantium ipsum ipsa recusandae optio velit, ad, minus culpa
-              dolorum id. Quasi labore iste vel nisi pariatur veritatis fuga
-              obcaecati enim fugit rerum ex, eaque blanditiis est quidem rem
-              ullam atque dolore quam voluptas necessitatibus nulla doloremque
-              ducimus? Perferendis laboriosam, quis quibusdam porro culpa
-              impedit blanditiis hic id sequi, repellendus rem, saepe non cum
-              libero aliquam suscipit? Numquam, nemo dicta quidem, perferendis
-              voluptas veniam, a quae amet id in tempore fugiat nulla. Nam
-              dolorem quos dolores a iste, modi, quis laudantium necessitatibus,
-              repellat quas veniam quidem fugiat? Eos accusantium nisi autem
-              animi corrupti mollitia minima culpa voluptatum magnam recusandae
-              quas obcaecati, quia hic rerum molestiae ipsum iusto, delectus,
-              alias beatae. Eos repellat, at officiis velit repudiandae labore
-              repellendus, modi minima perspiciatis magnam qui culpa cum, harum
-              similique dolorum sint odio ex dignissimos architecto magni
-              consequatur! Laudantium quasi, expedita cum nemo quibusdam
-              consequatur corrupti iusto commodi illo modi nihil quaerat
-              voluptatibus perspiciatis cupiditate minima ipsam quia non eaque
-              voluptate dolorum necessitatibus nesciunt vero alias. Ducimus
-              accusantium eaque hic ipsum, fugiat vero ab.
-            </p>
+          <!-- side bar start -->
+          <div
+            class="col-md-3 wow bounceInRight side-bar"
+            data-wow-duration="2s"
+          >
+            <div class="card border-danger rounded-0 rounded-top">
+              <div class="bg-red card-header text-white fw-bold">Featured</div>
+              <ul class="list-group list-group-flush">
+                <a href="#"><li class="list-group-item">MHT-CET</li></a>
+                <a href="#"><li class="list-group-item">JEET</li></a>
+                <a href="#"><li class="list-group-item">NEET</li></a>
+                <a href="#"><li class="list-group-item">Bsc</li></a>
+                <a href="#"><li class="list-group-item">F.Y.J.C Science</li></a>
+                <a href="#"><li class="list-group-item">S.Y.J.C Science</li></a>
+                <a href="#"
+                  ><li class="list-group-item">IX English Medium</li></a
+                >
+                <a href="#"
+                  ><li class="list-group-item">X English Medium</li></a
+                >
+              </ul>
+            </div>
+
+            <!-- side form -->
+            <div class="card border-danger rounded-0 rounded-top mt-4">
+              <div class="bg-red card-header text-white fw-bold">
+                Quik Enquiry
+              </div>
+              <form class="p-3">
+                <div class="mb-2">
+                  <label for="exampleInputName" class="form-label"
+                    >Full Name</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="exampleInputName"
+                    aria-describedby="emailHelp"
+                  />
+                </div>
+                <div class="mb-2">
+                  <label for="exampleInputEmailid1" class="form-label"
+                    >Email ID</label
+                  >
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="exampleInputEmailid"
+                  />
+                </div>
+                <div class="mb-2">
+                  <label for="exampleInputtext" class="form-label"
+                    >Mobile Number</label
+                  >
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="exampleInputnumber"
+                  />
+                </div>
+                <div class="mb-2">
+                  <label for="exampleFormControlTextarea1" class="form-label"
+                    >Select Class</label
+                  >
+                  <select
+                    class="form-select"
+                    aria-label="Default select example"
+                  >
+                    <option selected>Open this select menu</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
+                </div>
+                <div class="mb-2">
+                  <label for="exampleFormControlTextarea1" class="form-label"
+                    >Message</label
+                  >
+                  <textarea
+                    class="form-control"
+                    id="exampleFormControlTextarea1"
+                    rows="3"
+                  ></textarea>
+                </div>
+
+                <button type="button" class="btn btn-outline-danger w-100">
+                  Submit
+                </button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
