--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Shaikh Tuturials</title>
+    <title>Gallery | Shaikh Tuturials</title>
     <!-- google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -63,7 +63,7 @@
               <span class="px-4">| </span>
               <i class="fa-solid fa-mobile-screen-button pe-3"></i> Helpline
               Number +91 9892728554 <span class="px-4">| </span>
-              <i class="fa-solid fa-mobile-screen-button pe-3"></i> Admision
+              <i class="fa-solid fa-mobile-screen-button pe-3"></i> Admission
               Enquiry +91 7021431986
             </span>
             <span class="ps-3">
@@ -80,7 +80,7 @@
     <nav class="navbar navbar-expand-lg bg-danger sticky-top">
       <div class="container px-0">
         <div class="">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="" width="70" height="auto" />
           </a>
         </div>
@@ -101,9 +101,11 @@
         >
           <ul class="nav nav-pills align-content-around">
             <li class="nav-item">
-              <a href="#" class="nav-link active" aria-current="page">Home</a>
+              <a href="index.html" class="nav-link">Home</a>
             </li>
-            <li class="nav-item"><a href="#" class="nav-link">About Us</a></li>
+            <li class="nav-item">
+              <a href="about-us.html" class="nav-link">About Us</a>
+            </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -116,19 +118,29 @@
                 Courses
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">IIT - JEE</a></li>
-                <li><a class="dropdown-item" href="#">NEET action</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">MH-CET</a>
+                  <a class="dropdown-item" href="iit-jee.html">IIT - JEE</a>
+                </li>
+                <li><a class="dropdown-item" href="neet.html">NEET</a></li>
+                <li>
+                  <a class="dropdown-item" href="mh-cet.html">MH-CET</a>
                 </li>
               </ul>
             </li>
-            <li class="nav-item"><a href="#" class="nav-link">Results</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Admision</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Faculty</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Gallery</a></li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Contact Us</a>
+              <a href="results.html" class="nav-link">Results</a>
+            </li>
+            <li class="nav-item">
+              <a href="Admission.html" class="nav-link">Admission</a>
+            </li>
+            <li class="nav-item">
+              <a href="faculty.html" class="nav-link">Faculty</a>
+            </li>
+            <li class="nav-item">
+              <a href="gallery.html" class="nav-link active">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact-us.html" class="nav-link">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -137,8 +149,47 @@
     <!-- ===========main header end============== -->
     <main>
       <!-- ==========about start============ -->
-      <div class="container py-4">
-        <div class="row about">
+      <div class="container py-4" id="images-gallery">
+        <div class="row">
+          <div
+            class="col-12 text-center pb-5 wow slideInLeft"
+            data-wow-duration="1s">
+            <h1 class="heading-title fw-normal lh-1">Gallery</h1>
+          </div>
+          <div class="row images-gallery-cols">
+            <div class="col-lg-4 wow zoomIn" data-wow-delay="0.5s">
+              <a href="gallery-detail.html">
+                <div class="images-gallery-col">
+                  <div class="img">
+                    <img src="images/slider-1-old.jpg" alt="" class="" />
+                  </div>
+                  <h2 class="title pb-2">Gallery Title</h2>
+                </div>
+              </a>
+            </div>
+  
+            <div class="col-lg-4 wow zoomIn" data-wow-delay="0.5s">
+              <a href="gallery-detail.html">
+                <div class="images-gallery-col">
+                  <div class="img">
+                    <img src="images/slider-2-old.jpg" alt="" class="" />
+                  </div>
+                  <h2 class="title pb-2">Gallery Title</h2>
+                </div>
+              </a>
+            </div>
+  
+            <div class="col-lg-4 wow zoomIn" data-wow-delay="0.5s">
+              <a href="gallery-detail.html">
+                <div class="images-gallery-col">
+                  <div class="img">
+                    <img src="images/slider-3-old.jpg" alt="" class="" />
+                  </div>
+                  <h2 class="title pb-2">Gallery Title</h2>
+                </div>
+              </a>
+            </div>
+          </div>
           
         </div>
       </div>
