--- a/mh-cet.html
+++ b/mh-cet.html
@@ -63,7 +63,7 @@
               <span class="px-4">| </span>
               <i class="fa-solid fa-mobile-screen-button pe-3"></i> Helpline
               Number +91 9892728554 <span class="px-4">| </span>
-              <i class="fa-solid fa-mobile-screen-button pe-3"></i> Admision
+              <i class="fa-solid fa-mobile-screen-button pe-3"></i> Admission
               Enquiry +91 7021431986
             </span>
             <span class="ps-3">
@@ -131,7 +131,7 @@
               <a href="results.html" class="nav-link">Results</a>
             </li>
             <li class="nav-item">
-              <a href="admision.html" class="nav-link">Admision</a>
+              <a href="Admission.html" class="nav-link">Admission</a>
             </li>
             <li class="nav-item">
               <a href="faculty.html" class="nav-link">Faculty</a>
